app-deployement.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hospital-app
  namespace: chandana-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hospital-app
  template:
    metadata:
      labels:
        app: hospital-app
    spec:
      containers:
      - name: hospital-app
        image: 10kartikey/hospital-management-system-hospital-app:latest
        ports:
        - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: hospital-service
  namespace: chandana-ns
spec:
  selector:
    app: hospital-app
  ports:
  - port: 82
    targetPort: 5000
  type: NodePort
