Route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hospital-rt 
  namespace: chandana-ns
spec:
  parentRefs:
    - name: kgateway-gw
  rules:
    - matches:
      - path:
          type: PathPrefix
          value: /
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /
      backendRefs:
        - name: hospital-service
          port: 82
